--- a/laba_2/app/src/main/AndroidManifest.xml
+++ b/laba_2/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="by.bsuir.laba_2">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -12,6 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Laba_2">
+        <activity
+            android:name=".AboutProductActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
